# coq

./: .bazelrc  .gitignore  BUILD.bazel  Makefile.build  README.md  WORKSPACE.bazel  WORKSPACE.bzl  deps.edn
bzl/: _CoqProject
bzl/tools/: genbuildfiles.joke
checker/: BUILD.bazel
clib/: BUILD.bazel
clj/: README.md
clj/src/: coq.clj
clj/src/coq/: options.clj  utils.clj
clj/src/coq/templates/: BUILD.bazel.mustache
config/: BUILD.bazel
coqpp/: BUILD.bazel
dev/: BUILD.bazel
engine/: BUILD.bazel
gramlib/: BUILD.bazel
interp/: BUILD.bazel
kernel/: BUILD.bazel
kernel/byterun/: BUILD.bazel
lib/: BUILD.bazel
parsing/: BUILD.bazel
plugins/btauto/: BUILD.bazel
plugins/cc/: BUILD.bazel
plugins/derive/: BUILD.bazel
plugins/extraction/: BUILD.bazel
plugins/firstorder/: BUILD.bazel
plugins/funind/: BUILD.bazel
plugins/ltac/: BUILD.bazel
plugins/micromega/: BUILD.bazel
plugins/nsatz/: BUILD.bazel
plugins/omega/: BUILD.bazel
plugins/ring/: BUILD.bazel
plugins/rtauto/: BUILD.bazel
plugins/ssr/: BUILD.bazel
plugins/ssrmatching/: BUILD.bazel
plugins/ssrsearch/: BUILD.bazel
plugins/syntax/: BUILD.bazel
pretyping/: BUILD.bazel
printing/: BUILD.bazel
proofs/: BUILD.bazel
stm/: BUILD.bazel
sysinit/: BUILD.bazel
tactics/: BUILD.bazel
theories/: BUILD.bazel
theories/Arith/: BUILD.bazel
theories/Array/: BUILD.bazel
theories/Bool/: BUILD.bazel
theories/Compat/: BUILD.bazel
theories/FSets/: BUILD.bazel
theories/Floats/: BUILD.bazel
theories/Init/: BUILD.bazel
theories/Lists/: BUILD.bazel
theories/Logic/: BUILD.bazel
theories/MSets/: BUILD.bazel
theories/NArith/: BUILD.bazel
theories/Numbers/: BUILD.bazel
theories/Numbers/Cyclic/: BUILD.bazel
theories/Numbers/Cyclic/Abstract/: BUILD.bazel
theories/Numbers/Cyclic/Int31/: BUILD.bazel
theories/Numbers/Cyclic/Int63/: BUILD.bazel
theories/Numbers/Cyclic/ZModulo/: BUILD.bazel
theories/Numbers/Integer/: BUILD.bazel
theories/Numbers/Integer/Abstract/: BUILD.bazel
theories/Numbers/Integer/Binary/: BUILD.bazel
theories/Numbers/Integer/NatPairs/: BUILD.bazel
theories/Numbers/NatInt/: BUILD.bazel
theories/Numbers/Natural/: BUILD.bazel
theories/Numbers/Natural/Abstract/: BUILD.bazel
theories/Numbers/Natural/Binary/: BUILD.bazel
theories/Numbers/Natural/Peano/: BUILD.bazel
theories/PArith/: BUILD.bazel
theories/Program/: BUILD.bazel
theories/QArith/: BUILD.bazel
theories/Reals/: BUILD.bazel
theories/Reals/Abstract/: BUILD.bazel
theories/Reals/Cauchy/: BUILD.bazel
theories/Relations/: BUILD.bazel
theories/Setoids/: BUILD.bazel
theories/Sets/: BUILD.bazel
theories/Sorting/: BUILD.bazel
theories/Strings/: BUILD.bazel
theories/Structures/: BUILD.bazel
theories/Unicode/: BUILD.bazel
theories/Vectors/: BUILD.bazel
theories/Wellfounded/: BUILD.bazel
theories/ZArith/: BUILD.bazel
theories/btauto/: BUILD.bazel
theories/derive/: BUILD.bazel
theories/extraction/: BUILD.bazel
theories/funind/: BUILD.bazel
theories/micromega/: BUILD.bazel
theories/nsatz/: BUILD.bazel
theories/omega/: BUILD.bazel
theories/rtauto/: BUILD.bazel
theories/setoid_ring/: BUILD.bazel
theories/ssr/: BUILD.bazel
theories/ssrmatching/: BUILD.bazel
theories/ssrsearch/: BUILD.bazel
tools/: BUILD.bazel
tools/coqdoc/: BUILD.bazel
topbin/: BUILD.bazel
toplevel/: BUILD.bazel
user-contrib/Ltac2/: BUILD.bazel
vernac/: BUILD.bazel
